# Sirius2.0

./: .env.example  .gitignore  CLAUDE.md  MVP-STATUS.md  Pitch.md  Plan.md  README.md  TASKS.md  audit.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
boundless/: Cargo.toml  README.md
boundless/datasets/: generate.ts  input-tier1-small.json  input-tier1.json  receipt-tier1.json  receipt-tier2.json  receipt-tier3.json  tier1-premium.json  tier2-standard.json  tier3-lowquality.json
boundless/escrow/: Cargo.toml
boundless/escrow-mini/: Cargo.toml
boundless/escrow-mini/src/: lib.rs
boundless/escrow/src/: lib.rs
boundless/host/: Cargo.toml
boundless/host/src/: main.rs
boundless/methods/: Cargo.toml
boundless/methods/guest/: Cargo.toml
public/: demo-dataset.json
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/(app)/: layout.tsx
src/components/common/: EmptyState.tsx  LoadingSpinner.tsx  Modal.tsx  Toast.tsx  TxLink.tsx
src/components/dataset/: DatasetCard.tsx  DatasetDetail.tsx  QualityCertificate.tsx
src/components/landing/: Blob.tsx
src/components/layout/: Footer.tsx  Header.tsx  SharedBlob.tsx  Sidebar.tsx
src/components/loan/: LoanStatusBadge.tsx  RepaymentProgress.tsx
src/hooks/: use-datasets.ts  use-loans.ts  use-my-datasets.ts  use-role-detection.ts  use-route-guard.ts  use-wallet-balance.ts  use-wallet-credentials.ts
src/lib/: api-client.ts  api-utils.ts  persistence.ts  utils.ts  xrpl-constants.ts
src/lib/sirius/: boundless.ts  (+9 more)
src/stores/: wallet.ts
src/types/: xrpl-connect.d.ts
(+61 files in other folders)
